--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "base-error",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "Base Error",
 	"author": {
 		"name": "Zlatko Fedor",
@@ -12,7 +12,7 @@
 		"url": "git://github.com/seeden/base-error.git"
 	},
 	"keywords": [
-		"Error",
+		"error",
 		"extend"
 	],
 	"private": false,
