replaced grunt with gulp es6 scripts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "base-error",
-	"version": "1.0.4",
+	"version": "2.0.0",
 	"description": "Base Error",
 	"author": {
 		"name": "Zlatko Fedor",
@@ -26,16 +26,18 @@
 		"node": ">= 0.10.0"
 	},
 	"scripts": {
-		"test": "node node_modules/grunt-cli/bin/grunt test"
+		"test"  : "npm run build && node ./node_modules/gulp/bin/gulp.js test",
+		"build" : "node ./node_modules/gulp/bin/gulp.js build"
 	},
+	"main": "./dist/",
 	"dependencies": {
 	},
 	"devDependencies": {
-		"grunt": "~0.4.4",
-		"grunt-cli": "~0.1.13",
-		"grunt-env": "~0.4.1",
-		"grunt-mocha-test": "~0.10.2",
-		"should": "~3.3.1"
+		"gulp": "~3.8.11",
+		"gulp-mocha": "~2.0.0",
+		"gulp-babel": "~4.0.0",
+		"should": "~5.0.1",
+		"babel": "~4.7.1"
 	},
 	"bugs": {
 		"url": "https://github.com/seeden/base-error/issues"
