--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "base-error",
-	"version": "2.0.1",
-	"description": "Base Error",
+	"version": "2.0.2",
+	"description": "Class extended from javascript Error with support for stack trace",
 	"author": {
 		"name": "Zlatko Fedor",
 		"email": "zfedor@gmail.com",
